--- a/service_users/package.json
+++ b/service_users/package.json
@@ -9,17 +9,19 @@
     "swagger": "node src/swagger.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.16.3",
+    "pg-pool": "^3.10.1",
     "pino": "^8.15.0",
     "pino-http": "^9.0.0",
-    "uuid": "^9.0.0",
-    "dotenv": "^16.0.3",
-    "cors": "^2.8.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
